# PruebaTecnica

./: CMakeLists.txt  README.md
src/: Bloque1.cpp  Bloque1.hpp  Bloque2.cpp  Bloque2.hpp  Bloque3.cpp  Bloque3.hpp
test/: Test.cpp  TestB1.cpp  expectBloque3Ejercicio4.txt
